# malodivo

./: .gitignore  README.md  input.json  malodivo.cabal
app/: Main.hs
src/: Calculate.hs  Input.hs  Main.hs  Malodivo.hs  Output.hs  Parliament.hs  PrettyPrinter.hs
src/Input/: Bill.hs  BillSpecificFunding.hs  Cap.hs  CategoryDefaultFunding.hs  District.hs
