cabal-version:       2.4

name:                malodivo
version:             1.0.0
author:              Zheng Yan PEH (zypeh)
maintainer:          zypeh.geek@gmail.com

tested-with:         GHC == 8.8.1

common haskell
    default-language: Haskell2010

common ghc-warnings
    ghc-options: -Wall -Wcompat -Widentities -Wno-name-shadowing
    ghc-options: -Wincomplete-record-updates -Wincomplete-uni-patterns
    ghc-options: -Wpartial-fields -Wredundant-constraints

common extensions
    default-extensions:
        -- Allow to use Applicative inside the do-block
        ApplicativeDo

        -- Strict evaluation in the data fields
        BangPatterns

        DeriveFoldable
        DeriveFunctor
        DeriveGeneric

        -- Allow the use of complex constraints in class declaration contexts.
        FlexibleContexts
        
        -- Allow definition of type class instances with arbitrary nested types
        -- in the instance head.
        FlexibleInstances

        -- Enabling the string literals which belongs to the `IsString`
        -- typeclass.
        OverloadedStrings

        -- Generalisation of associated data types
        TypeFamilies

executable malodivo
    import:          haskell, ghc-warnings, extensions
    hs-source-dirs:  src
    main-is:         Main.hs
    build-depends:   aeson
                   , base
                   , bytestring
                   , text
                   , unordered-containers
    other-modules:
        Input
        -- Input.Bill
        -- Input.BillSpecificFunding
        -- Input.Cap
        -- Input.CategoryDefaultFunding
        -- Input.District
        -- Calculate
        Output
        Parliament